multiple updates and changes

--- a/HaI.html
+++ b/HaI.html
@@ -5,6 +5,12 @@
 <link rel="stylesheet" href="cssmain.css" type="text/css"/>
 </head>
 <body>
-<h1>University of Liverpool - Theoretical Physics MPhys</h1>
+    <div id="banner">
+       <a href="index.html">Home</a><a href="me.html">About Me</a> <a href="Education.html">Education</a> <a href="work.html">Work Experience</a>
+    </div>
+<h1>Hobbies and Interests</h1>
+<h2>Reading</h2>
+<h2>Running</h2>
+<h2>Guitar</h2>
 </body>
 </html>
