--- a/education.html
+++ b/education.html
@@ -5,9 +5,13 @@
 </head>
 <body>
 <link rel="stylesheet" href="cssmain.css" type="text/css"/>
+<div id="banner">
+    <a href="index.html">Home</a><a href="me.html">About Me</a> <a href="HaI.html">Hobbies and Interests</a> <a href="work.html">Work Experience</a>
+</div>
+<div>
 <h1>Education</h1>
 <h2>University of Liverpool - Theoretical Physics MPhys</h2>
 <h2>Carmel College - Foundation Year</h2>
-
+<div>
 </body>
 </html>
