--- a/work.html
+++ b/work.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" href="cssmain.css" type="text/css"/>
 </head>
 <body>
+    <div id="banner">
+       <a href="index.html">Home</a> <a href="me.html">About Me</a><a href="Education.html">Education</a> <a href="HaI.html">Hobbies and Interests</a> 
+    </div>
 <h1>Work Experience</h1>
 
 <h2>
