New colour scheme, general improvements

--- a/education.html
+++ b/education.html
@@ -11,7 +11,9 @@
 <div>
 <h1>Education</h1>
 <h2>University of Liverpool - Theoretical Physics MPhys</h2>
+<p>I studied an integrated masters in theoretical physics at the university of liverpool. My masters thesis was on the behaviour of geodesic curves near the event horizons of black holes</p>
 <h2>Carmel College - Foundation Year</h2>
+<p>Due to the long break between me leaving school and deciding to go to university, it was neccesary for me to first complete a foundation year. This was run by the University of Liverpool through Carmel College in St Helens. I studied physics and maths here</p>
 <div>
 </body>
 </html>
