--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="cssmain.css" type="text/css"/>
     </head>
     <body>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <div id="banner">
             <a href="me.html">About Me</a> <a href="Education.html">Education</a> <a href="HaI.html">Hobbies and Interests</a> <a href="work.html">Work Experience</a>
         </div>
@@ -16,7 +17,7 @@
         </div>
         <div>
         <h1>Drew Soul</h1>
-        <h2>Graduate Software Developer</h2>
+        <h2>Graduate Software Developer (Accelerator)</h2>
         </div>
        </div>
     
