--- a/work.html
+++ b/work.html
@@ -15,5 +15,6 @@
 </h2>
 <p>Project was to build a compact particle accelerator which could be used to image rock art. My placement involved running simulations of an RFQ particle accelerator in Octave. I also created three dimensional plots of electric and magnetic fields within the accelerator in Python and Matlab. </p>
 <h2> Lloyds Banking Group</h2>
+<p>I worked for Lloyds Banking Group for 3 years. My first year was spent in a call centre dealing with customer queries, the following two years I spent in an office performing various admin tasks.</p>
 </body>
 </html>
