--- a/HaI.html
+++ b/HaI.html
@@ -8,6 +8,7 @@
     <div id="banner">
        <a href="index.html">Home</a><a href="me.html">About Me</a> <a href="Education.html">Education</a> <a href="work.html">Work Experience</a>
     </div>
+<div>
 <h1>Hobbies and Interests</h1>
 <h2>Reading</h2>
 <p>I read most days, usually fantasy or science fictions, such as Joe Abercrombies First Law Trilogy, or George R R Martin's A Song of Ice and Fire</p>
@@ -15,5 +16,6 @@
 I began running around 10 years ago in an attempt to increase my fitness. I have since come to enjoy it and consider it more of a hobbie than a chore
 <h2>Guitar</h2>
 <p>I started playing guitar at 16, and played consistently for about 6 years. Although I still enjoy playing guitar I find I have less time now, and so do not practice as much as I would like to.</p>
+</div>
 </body>
 </html>
