--- a/me.html
+++ b/me.html
@@ -8,7 +8,9 @@
     <div id="banner">
         <a href="index.html">Home</a>    <a href="Education.html">Education</a> <a href="HaI.html">Hobbies and Interests</a> <a href="work.html">Work Experience</a>
     </div>
+<div>
 <h1>About Me</h1>
 <p>My name is Drew Soul, I am 27 and I live in St Helens. I am originally from Winchester in Hampshire, but moved to Liverpool in 2017 to attend University. I currently live in St Helens</p>
+</div>
 </body>
 </html>
